# rsolve

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  appveyor.yml
src/: aliasing.rs  arrays.rs  branching.rs  collections.rs  core.rs  dimacs.rs  flags.rs  lib.rs  main.rs  solver.rs  utils.rs  variable_ordering.rs  variables.rs
src/collections/: adaptable_heap.rs  lit_idx_vec.rs  mod.rs  var_heap.rs  var_idx_vec.rs
src/core/: bool.rs  clause.rs  literal.rs  mod.rs  sign.rs  valuation.rs  variable.rs
src/solving/: clause_database.rs  flags.rs  mod.rs  restart_strategy.rs  solver.rs  traits.rs  valuation.rs  variable_ordering.rs  watched_literals.rs
src/solving/heuristics/: mod.rs
src/solving/heuristics/branching/: mod.rs  naive.rs  vsids.rs
src/solving/heuristics/restart/: luby.rs  mod.rs
src/solving/restart_strategy/: luby.rs  mod.rs
src/solving/traits/: backtracking.rs  clause_database.rs  clause_deletion.rs  conflict_analysis.rs  mod.rs  propagation.rs  restart.rs  search.rs  valuation.rs  watched_literals.rs
src/solving/variable_selection/: mod.rs  naive.rs  vsids.rs
tests/: bool.rs  clause.rs  flags.rs  lit_idx_vec.rs  literal.rs  solver.rs  test_instances.rs  var_idx_vec.rs  variable.rs  variable_ordering.rs
tests/collections/: lit_idx_vec.rs  var_idx_vec.rs
tests/core/: clause.rs  literal.rs  variable.rs
tests/resources/: 009.cnf  029.cnf  033.cnf  ex.cnf  prest.cnf  prest2.cnf
