[package]
name    = "rsolve"
version = "0.1.0"
authors = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]

[dependencies]
argparse    = "0.2.1"  # python-like command line arg parsing

flate2      = "0.2.20" # gzip
bzip2       = "0.3.2"  # bz2
xz2         = "0.1.3"  # Lzma

fixedbitset = "0.1.8"  # compact bit set

[profile.release]
opt-level = 3
lto = true

[badges]
# Continuous Integration on Linux, OSX
travis-ci = { repository = "xgillard/rsolve", branch = "master" }
# Continuous Integration on Windows
appveyor  = { repository = "xgillard/rsolve", branch = "master", service = "github" }
# Code coverage
codecov   = { repository = "xgillard/rsolve", branch = "master", service = "github" }
